# mai_oop_labs

./: README.md
lr1/: CMakeLists.txt  main.cpp
lr1/include/: to32Binary.hpp
lr1/src/: to32Binary.cpp
lr1/test/: test.cpp
lr2/: CMakeLists.txt  main.cpp
lr2/include/: Twelve.hpp
lr2/src/: Twelve.cpp
lr2/test/: test.cpp
lr3/: CMakeLists.txt  main.cpp
lr3/include/: array.hpp  figures.hpp  point.hpp
lr3/src/: array.cpp  figures.cpp  point.cpp
lr3/test/: test.cpp
lr4/: CMakeLists.txt  main.cpp
lr4/include/: array.hpp  figure.hpp  point.hpp
lr4/src/: figure.cpp
lr4/test/: test.cpp
lr5/: CMakeLists.txt  main.cpp
lr5/include/: iterator.hpp  memory_resource.hpp  queue.hpp
lr5/src/: memory_resource.cpp  queue.cpp
lr5/test/: tests.cpp
lr6/: CMakeLists.txt  main.cpp
lr6/include/: Factory.hpp  NPC.hpp  Observer.hpp  Visitor.hpp
lr6/src/: Factory.cpp  NPC.cpp
lr6/test/: tests.cpp
lr7/: CMakeLists.txt  main.cpp
lr7/include/: Factory.hpp  Game.hpp  NPC.hpp  Observer.hpp  Visitor.hpp
lr7/src/: Factory.cpp  Game.cpp  NPC.cpp
lr7/test/: tests.cpp
